--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'DH'
 - !lcsh 'Charlotte, of Bourbon, consort of William I, Prince of Orange, 1548?-1582'
+- GITenberg
 title: Charlotte de Bourbon, princesse d'Orange
 url: http://www.gutenberg.org/ebooks/35525
